--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-polyfill": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^0.28.11",
+    "date-fns": "^1.29.0",
     "emotion": "^9.2.6",
     "emotion-theming": "^9.2.6",
     "extract-text-webpack-plugin": "^3.0.2",
